# 3D-Game-of-Life

./: .clang-format  .gitignore  CMakeLists.txt  README.md  valgrind-out.txt  valgrind-out0.txt  valgrind-out1.txt
dependencies/glad/include/glad/: egl.h  gl.h  gles1.h  gles2.h  glsc2.h  glx.h  vulkan.h
dependencies/glad/src/: gl.c
dependencies/glfw/: cmake_install.cmake  cmake_uninstall.cmake
dependencies/glfw/docs/: Makefile  cmake_install.cmake
dependencies/glfw/src/: Makefile  cmake_install.cmake
resources/include/: kernel_calc_model_matrices.h  shader_plain_color.h  shader_prism.h  shader_test.h  shader_voxel.h
resources/kernels/: calc_model_matrices.cl
resources/shaders/: instance.shader  instancied.shader  plain_color.shader  test.shader  test_fragment.shader  voxel.shader
src/: Application.cpp  Application.h  Window.h  main.cpp
src/core/: Application.cpp  Application.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Logger.cpp  Logger.h  Window.cpp  Window.h  precompiled.h
src/core/events/: ApplicationEvent.h  Event.h  EventQueue.h  KeyEvent.h  MouseEvent.h
src/core/layers/: ImGuiLayer.cpp  ImGuiLayer.h  MainLayer.h  Sandbox.h
src/events/: Event.h  KeyEvent.h
src/renderer/: BatchRenderer.cpp  BatchRenderer.h  Batcher.cpp  Batcher.h  CLBatcher.cpp  CLBatcher.h  CLHandler.h  Camera.cpp  Camera.h  FlyingCamera.cpp  GLConfiguration.h  GLHandler.h  IndexBuffer.cpp  IndexBuffer.h  InstanceHandler.h  MaterialLibrary.cpp  MaterialLibrary.h  Model.h  OldModel.h  RadialCamera.cpp  RadialCamera.h  RandomRenderer.cpp  RandomRenderer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h  VoxelRenderer.h
src/renderer/CL/: Buffer.h  CommandQueue.h  Context.h  Device.h  Kernel.h  Platform.h
src/renderer/Camera/: Camera3D.h  FlyingCamera.cpp  FlyingCamera.h  RadialCamera.cpp  RadialCamera.h
src/renderer/Materials/: Material.h  PlainColorMaterial.h  VoxelMaterial.h
src/renderer/Meshes/: IndexedMesh.h  Mesh.h  UnindexedMesh.h
src/renderer/Models/: Cube.h  CubeFrame.h  CubeVoxel.h  Cursor3D.h  Cursor3D_no_indices.h  Model.h  OldPrism.h  OneColorCube.h  Prism.h  SixColorCube.h  Surface.h  Vertex.h
src/utils/: GenerateKernels.h  GenerateShaders.cpp  GenerateShaders.h  PrebuildSetup.cpp
